:bug: Problemas con los task y roles.